# Go_With_the_Flow_Lab

./: CMakeLists.txt  main.cpp
src/: heat_flow.cpp  heat_flow.hpp  heat_flow_brain.cpp  heat_flow_brain.hpp  heat_flow_config.cpp  heat_flow_config.hpp  heat_flow_printer.cpp  heat_flow_printer.hpp  oops.cpp  oops.hpp
tests/: heat_flow_brain_test.cpp  heat_flow_config_test.cpp  heat_flow_printer_test.cpp  heat_flow_test.cpp  oops_test.cpp
